--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 pgRouting 4.0.0 Release Notes
 -------------------------------------------------------------------------------
 
+> _pgr_maxcardinalitymatch(text)
+> _pgr_tspeuclidean(text,bigint,bigint,integer)
+> pgr_tspeuclidean(text,bigint,bigint,integer)
+> _pgr_tsp(text,bigint,bigint,integer)
+> pgr_tsp(text,bigint,bigint,integer)
+
 Update from old versions is needed
 
 * Simplify C/C++ code for combinations style
@@ -14,6 +20,9 @@ Update from old versions is needed
   * _pgr_dijkstranear(text,bigint,anyarray,bigint,boolean)
   * _pgr_dijkstra(text,anyarray,anyarray,boolean,boolean,boolean,bigint)
   * _pgr_dijkstra(text,text,boolean,boolean,boolean)
+  * _pgr_maxcardinalitymatch(text,boolean)
+  * _pgr_tspeuclidean(text,bigint,bigint,double precision,integer,integer,integer,double precision,double precision,double precision,boolean)
+  * _pgr_tsp(text,bigint,bigint,double precision,integer,integer,integer,double precision,double precision,double precision,boolean)
 
 Breaking changes
 ...............................................................................
@@ -39,6 +48,20 @@ Changes:
 
 * New default parameter: max_cycles with default value `1`
 
+**Flow functions**
+
+Functions affected:
+
+* pgr_maxcardinalitymatch
+
+Changes:
+
+
+* Deprecated signatures are removed
+
+  * pgr_maxcardinalitymatch(text,boolean)
+
+* No longer accepting ``going`` and ``coming`` columns on inner query
 
 pgRouting 3.5.0 Release Notes
 -------------------------------------------------------------------------------
